ops/kubernetes/apps.old/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gotourl-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/app-root: "/index.html"
spec:
  rules:
  - http:
      paths:
      - path: "/index.html"
        backend:
          serviceName: frontend-service
          servicePort: 80
      - path: "/js"
        backend:
          serviceName: frontend-service
          servicePort: 80
      - path: "/"
        backend:
          serviceName: gotourl-service
          servicePort: 80
